# kontrol-s88-mk3-linux

./: README.md  pyproject.toml
captures/: openCloseKompleteKontrol.pcapng
docs/: REVERSE_ENGINEERING.md
src/kontrol_s88/: __init__.py  device.py  protocol.py  tempo_sync.py
tools/: s88-decoder.html
